Added DB models
