# docs/swagger.json
@@ -36,7 +36,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Project"
+                                "$ref": "#/definitions/models.Project"
                             }
                         }
                     }
@@ -60,7 +60,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.PlainProject"
+                            "$ref": "#/definitions/models.PlainProject"
                         }
                     }
                 ],
@@ -95,7 +95,39 @@
         }
     },
     "definitions": {
-        "main.PlainProject": {
+        "gorm.DeletedAt": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.ApiKey": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.PlainProject": {
             "type": "object",
             "required": [
                 "id"
@@ -110,18 +142,57 @@
                     "type": "string",
                     "minLength": 1
                 },
+                "image": {
+                    "description": "Image of the project\nRequired: false",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "name": {
                     "description": "Name of the project\nRequired: false",
                     "type": "string"
                 }
             }
         },
-        "main.Project": {
+        "models.ProgressItem": {
+            "type": "object",
+            "properties": {
+                "completedAt": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "eid": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Project": {
             "type": "object",
             "required": [
                 "id"
             ],
             "properties": {
+                "apiKeys": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ApiKey"
+                    }
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -134,11 +205,47 @@
                     "type": "string",
                     "minLength": 1
                 },
+                "image": {
+                    "description": "Image of the project\nRequired: false",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "name": {
                     "description": "Name of the project\nRequired: false",
                     "type": "string"
                 },
+                "progressItems": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ProgressItem"
+                    }
+                },
                 "updated_at": {
+                    "type": "string"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.User"
+                    }
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "kratosID": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
